1.8.3
-----

1.8.2
------
(RB=131451)
Add PatchTreeRecorder & PatchRequestRecorder to build patches that allow you to remove fields.

(RB=130545)
Allow clients to send request bodies in pson format. Upgraded servers will be
able to interpet bodies in pson format.

(RB=133781)
Remove legacy server code that uses ',' as separator for batch_get ids.  Correct format is "?ids=1&ids=2".

1.8.1
-----
Revert RB 126830 until compatibility issues are resolved.

1.8.0
-----
Increasing version to 1.8.0, because 126830 is wire-compatible, but compile-incompatible.

(RB=129457)
Modified D2ClientBuilder to accept load balancer factory as a parameter.

1.7.12
-----
(RB=130083)
Add RestliServlet to provide developers with a simple way to build a war using rest.li.

(RB=126830)
Deprecate the "items" field for the query parameters in idl. Array parameters use standard pdsc array format.
To make it backwards compatibile, request builders can still use Iterable parameters.
Fix bug that builder methods with Iterable<? extends DataTemplate> parameter are not working.

1.7.11
-----
(RB=130026)
Change build scripts to work with Gradle 1.3.

(RB=130083)
Add RestliServlet to provide developers with a simple way to build a war using rest.li.

1.7.10
-----
(RB=129645)
Add methods for common uses for ResponseFuture.getResponseEntity and RestClient.sendRequest(RequestBuilde ...)
client.sendRequest(builder.build()).getResponse().getEntity() can be simplified as follow to
client.sendRequest(builder).getResponseEntity();

1.7.9
-----
(RB=129334)
add try/catch to PropertyEvent runnables, add UnhandledExceptionHandler to NamedThreadFactory

(RB=129193)
fix a bug where the LoadBalancer config gets overwritten by empty map and causes D2 Strategy
to not instantiate properly

(RB=123406)
Change to allow clients to request data in pson-encoded format (and interpet pson-encoded data),
and for servers to be able to send pson-encoded responses.
