@@ -1,5 +1,7 @@
 1.8.3
 -----
+(RB=135225)
+Fix UnsupportedOperationException from UnmodifiableMap in SimpleLoadBalancerState.
 
 1.8.2
 ------
